# mentabotix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-make-prerelease.yml  build_on_push.yml  static.yml
docs/: Moving.puml
docs/source/: api.rst  conf.py  index.rst  installation.rst  mentabotix.rst  modules.rst  quickstart.rst  troubleshooting.rst  tutorials.rst  user_guide.rst
src/mentabotix/: __init__.py
src/mentabotix/modules/: botix.py  exceptions.py  menta.py
src/mentabotix/tools/: composers.py  generators.py
src/mentabotix/vision/: tagdetector.py
tests/: test_botix.py  test_composer.py  test_menta.py
