[project]
name = "mentabotix"
version = "0.1.0"
description = "A Bot control lib"
authors = [
    {name = "Whth", email = "88489697+Whth@users.noreply.github.com"},
]
dependencies = [
    "pydantic>=2.7.0",
    "coloredlogs>=15.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
viztracer = [
    "pytest>=8.1.1",
]
